--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "gitHead": "66b00448e9e26feea356d13f926624f1d904aaaf",
   "devDependencies": {
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "pm-tutdown": "0.0.2"
   }
 }
