--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async": "~0.2.9",
     "pm-tutdown": "0.0.2",
     "mocha": "~1.12.0",
-    "chai": "~1.7.2"
+    "chai": "~1.7.2",
+    "sinon": "~1.7.3"
   }
 }
