Implemented query parameter feature with additional unit tests as outlined in #14.  Some of the code was ported from Backbone itself, and from the [jQuery BBQ](https://github.com/cowboy/jquery-bbq/) library.  Both are MIT licensed as well, so this shouldn’t be an issue.  Also added myself to the contributor list.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "author": "ryan@barc.com",
   "contributors": [
-    "Mario Gutierrez <mario@mgutz.com>"
+    "Mario Gutierrez <mario@mgutz.com>",
+    "Ryan Lynch <lynch.r.j@gmail.com>" 
   ],
   "license": "MIT",
   "gitHead": "66b00448e9e26feea356d13f926624f1d904aaaf",
