bower registration, added Ryan Lynch to contributors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backbone.giraffe",
   "version": "0.1.5",
   "description": "A lightweight library that extends Backbone.js to new heights.",
-  "main": "index.js",
+  "main": "dist/backbone.giraffe.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,8 @@
   },
   "author": "ryan@barc.com",
   "contributors": [
-    "Mario Gutierrez <mario@mgutz.com>"
+    "Mario Gutierrez <mario@mgutz.com>",
+    "Ryan Lynch <lynch.r.j@gmail.com>"
   ],
   "license": "MIT",
   "gitHead": "66b00448e9e26feea356d13f926624f1d904aaaf",
