--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
   "authors": [
     "Ryan Atkinson <ryanatkn@gmail.com>",
     "Mario Gutierrez <mario@mgutz.com>",
-    "Ryan Lynch <lynch.r.j@gmail.com>"
+    "Ryan Lynch <lynch.r.j@gmail.com>",
+    "Justin Hileman <justin@justinhileman.info>"
   ],
   "description": "A lightweight library that extends Backbone.js to new heights.",
   "main": "dist/backbone.giraffe.js",
