--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "ryan@barc.com",
   "contributors": [
     "Mario Gutierrez <mario@mgutz.com>",
-    "Ryan Lynch <lynch.r.j@gmail.com>"
+    "Ryan Lynch <lynch.r.j@gmail.com>",
+    "Justin Hileman <justin@justinhileman.info>"
   ],
   "license": "MIT",
   "gitHead": "66b00448e9e26feea356d13f926624f1d904aaaf",
