--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,9 @@
 {
   "name": "backbone.giraffe",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "homepage": "https://github.com/barc/backbone.giraffe",
   "authors": [
-    "Ryan Atkinson <ryanatkn@gmail.com>",
-    "Mario Gutierrez <mario@mgutz.com>",
-    "Ryan Lynch <lynch.r.j@gmail.com>",
-    "Justin Hileman <justin@justinhileman.info>"
+    "Ryan Atkinson <ryanatkn@gmail.com>"
   ],
   "description": "A lightweight library that extends Backbone.js to new heights.",
   "main": "dist/backbone.giraffe.js",
@@ -19,6 +16,16 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "_gh-pages"
+    "_gh-pages",
+    "src",
+    "dist/docs",
+    "dist/tests",
+    "AUTHORS",
+    "CHANGELOG.md",
+    "Projfile.coffee",
+    "Projtest.coffee",
+    "TODO.md",
+    "_README*.md",
+    "package.json"
   ]
 }
